Fixes the grid implementation in the form so that everything is always centered. Removes the form containers as they're no longer necessary with the new grid implementation. Adds a missing meta tag that was preventing the site working properly on small screens.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,15 @@
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
 html {
     font-family: "Lato", Helvetica, sans-serif;
 }
 
 body {
+    box-sizing: border-box;
     max-width: 600px;
     margin: 0 auto;
 }
@@ -39,31 +46,35 @@ body {
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 1.5rem;
+    column-gap: .75rem;
     align-items: center;
     font-size: 0.9rem;
+    width: auto;
+}
+
+@media screen and (min-width: 26rem) {
+    .form {
+        grid-template-columns: 1fr auto 1fr;
+    }
 }
 
 .form__button-container {
-    display: flex;
-    margin-top: 1.5rem;
-}
-
-.form__input-group {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    column-gap: .75rem;
-    margin-bottom: 1rem;
+    justify-content: center;
+    grid-column: 1 / 4;
 }
 
 .form__input {
     max-width: 6rem;
+    width: 100%;
     border-radius: 4px;
     border: 1px solid #1c2023;
     padding: 7px 10px;
     font-size: inherit;
+    justify-self: center;
 }
 
 .form__label {
@@ -73,6 +84,7 @@ body {
 }
 
 .button {
+    grid-column: 2 / 3;
     font-size: 1.2rem;
     padding: 10px 30px;
     border: 1px solid #1c2023;
